# kvuno-api

./: .dockerignore  .env.example  .gitignore  .pylintrc  Dockerfile  Dockerfile.prod.dockerfile  README.md  alembic.ini  docker-compose.yml  housekeeping.py  kvuno.db-journal  model-generator.py  pyproject.toml  run.py  test.py
.github/workflows/: todo-checker.yml
alembic/: env.py  script.py.mako
alembic/versions/: 20240724145847_create_processsed_files_table.py  20240725145148_create_crop_data_table.py  20240813155554_add_colum_index_to_crop_data_table.py  20240813155554_add_colum_indexes_to_crop_data_table.py  20240813155943_add_hash_partitioning_to_crop_data_table.py  20240816195325_add_indexes_to_crop_data_table.py  20240819182059_create_users_table.py  20240910123310_rename_coordinates_column_in_crop_data_table.py  20240910123313_add_coordinates_as_point_column_in_crop_data_table.py  20240911154317_rename_coordinates_column_to_location_in_crop_data_table.py  20240911154341_add_coordinate_column_as_geometry_in_crop_data_table.py  20240913143726_create_users_table.py  20241014124425_add_crop_name_column_to_crop_data_table.py
app/: __init__.py  config.py  gunicorn_config.py  routes.py
app/api/: __init__.py  planting_data.py  user.py
app/dto/: api_responses.py  crop_data_resp.py  data_class.py  data_filters.py  planting_data_resp.py
app/models/: database_conn.py  kvuno.py  kvuno_test.py  models.py
app/preprocessor/: data_preprocessor.py
app/repo/: crop_data.py  planting_data.py  processed_files.py
app/routes/: __init__.py  api_v1.py  app_routes.py  main.py  query_data.py
app/utils/: __init__.py  logging.py  migration_utils.py
static/data/: useCase_ZambeziBasin_Solidaridad_Soybean_OptSowingDates.RDS  zambezi_soybea.RDS
